fix: increase accessibility contrast in primary color

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -1,3 +1,3 @@
 :root {
-  --mdc-theme-primary: #2196f3;
+  --mdc-theme-primary: #1976d2;
 }
